name:                okasaki
version:             0.1.0.0
synopsis:            Purely Functional Data Structures
description:         This is an experimental package, currently not suitable for produnction use. It contains a set of purely functional data structures.
homepage:            https://github.com/Abhiroop/okasaki#readme
license:             BSD3
license-file:        LICENSE
author:              Abhiroop Sarkar
maintainer:          asiamgenius@gmail.com
copyright:           2017 Abhiroop Sarkar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Queue,
                       BST,
                       RedBlackTree,
                       LeftistHeap,
                       BinaryHeap,
                       Deque
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7.1,
                       data-ordlist
  default-language:    Haskell2010

test-suite okasaki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5.7.1
                     , okasaki
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Abhiroop/okasaki
